--- a/css/style.css
+++ b/css/style.css
@@ -780,7 +780,7 @@ Responsive media queries
 
 }
 
-.img-responsive{
+.img-responsive-header{
         margin: 5px;    
         width: 20%;
         height: 30%;
